# travel_agent_server

./: .env.dev  .gitignore  API.md  PRD.md  init_users_table.py  pyproject.toml  test.ipynb
app/: main.py
app/agents/: context.py  graph.py  mcp.py  memory.py  message.py  state.py  tools.py
app/agents/environment_agent/: agent.py  prompt.py
app/agents/environment_agent/tools/: weather.py
app/agents/manager_agent/: agent.py  prompt.py  tools.py
app/agents/planner_agent/: agent.py  prompt.py
app/agents/resource_agent/: agent.py  prompt.py
app/agents/resource_agent/tools/: poi.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  travel.py
app/core/: config.py  db.py  enums.py  exceptions.py  handlers.py  logging.py  security.py  stream_utils.py
app/models/: base.py  travel.py  user.py
app/schemas/request/: auth.py  travel.py
app/schemas/response/: auth.py  base.py  stream.py
app/services/: auth.py  travel.py
tests/: test_amap_api.py  test_env_agent.py  test_man_agent.py  test_mcp.py  test_ollama.py  test_plan_agent.py  test_res_agent.py  test_search_poi.py  test_travel_agent.py  test_xhs_mcp.py
